fix: returning id instead of entity type as kind